2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amadmin.c (balance): Don't core dump if DUMPCYLE is too
	  big.

2004-09-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* tape-src/tapetype.c: New -o option, doesn't overwrite amanda
	  tape without -o.
	* man/amtapetype.8.in: Document new -o option.

2004-09-15  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/amstatus.pl.in: Works with failed dump to tape.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* client-src/sendbackup-gnutar.c (end_backup): Write warning message
	  in not fatal error.
	* server-src/dumper.c (process_dumpline): Parse warning message.
	* server-src/reporter.c (handle_strange): Print warning message in
	  the STRANGE summary.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* server-src/driverio.c (free_serial): Set stable[s].dp to NULL.
	* server-src/driverio.c (disk2serial): Check that stable[s].dp == NULL.

2004-08-31  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Joe Rhett <jrhett@isite.net>

	* common-src/alloc.c (safe_env): Keep SYSTEMROOT if __CYGWIN__.

2004-08-05  Jean-Louis Martineau <martineau@iro.umontreal.ca>

        * client-src/amqde.c: Change snprintf for ap_snprintf.

2004-06-22  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* Amanda 2.4.4p3 released.
	* configure.in: AM_INIT_AUTOMAKE(amanda, 2.4.4p3).
	* News: Changes in release 2.4.4p3.

2004-05-10  Jean-Louis Martineau <martineau@iro.umontreal.ca>
	Patch by Paul Bijnens <paul.bijnens@xplanation.com>

	* server-src/planner.c: Log L_DISK for autoflush disk.

2004-04-30  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* common-src/amanda.h: #include "amanda-int.h" only if !CONFIGURE_TEST.

2004-04-29  Jean-Louis Martineau <martineau@iro.umontreal.ca>

	* config/acinclude.m4i (AX_CREATE_STDINT_H) : New macro.
	* configure.in: Use AX_CREATE_STDINT_H(common-src/amanda-int.h).