@@ -1,5 +1,11 @@
 2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>
 
+	* server-src/planner.c (promote_hills): Use dumpcycle instead of
+	  tapecycle.
+	* example/amanda.conf.in: Remove warning for tapecyle set to inf.
+
+2004-09-17  Jean-Louis Martineau <martineau@iro.umontreal.ca>
+
 	* server-src/amadmin.c (balance): Don't core dump if DUMPCYLE is too
 	  big.
 
